test/fails/bad_generics/tags2.lgl
tag a is vec<2>;
tag b is vec<2>;
tag c is b;
tag d is b;
tag e is c;

vec<2> to_top<`t : vec2>(`t x) {
    `t->vec<2> m = [[1., 0.], [0., 1.]];
    return m * x;
}

void main() {
    vec<2> fail = to_top<vec<3>>([1., 2.]); // so...many...problems
}